[package]
name = "nodejs-helper"
version = "0.0.1"
authors = ["Shishuo Wang", "Michael Yuan"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/second-state/nodejs-helper"
documentation = "https://cloud.secondstate.io/server-side-webassembly/rust-and-javascript/call-javascript-functions-from-rust"
homepage = "https://cloud.secondstate.io/"
readme = "README.md"
description = "Call Node.js functions from Rust"

[lib]
name = "nodejs_helper"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
