[package]
name = "nodejs-helper"
version = "0.0.3"
authors = ["Shishuo Wang", "Michael Yuan"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/second-state/nodejs-helper"
documentation = "https://cloud.secondstate.io/server-side-webassembly/rust-and-javascript/call-javascript-functions-from-rust"
homepage = "https://cloud.secondstate.io/"
readme = "README.md"
description = "Call Node.js functions from Rust"
categories = ["filesystem", "database", "web-programming", "development-tools", "wasm"]
keywords = ["nodejs", "WebAssembly", "wasm", "second-state", "javascript"]

[lib]
name = "nodejs_helper"
path = "src/lib.rs"
crate-type =["lib"]

[dependencies]
wasm-bindgen = "^0.2"
